# lspelling

./: Cargo.toml  README.md  flake.nix  package.nix  rust-toolchain.toml
crates/lsp/: Cargo.toml
crates/lsp/src/: commands.rs  debounce.rs  dictionary.rs  main.rs
crates/wordc/: Cargo.toml
crates/wordc/queries/: rust.scm
crates/wordc/src/: checker.rs  fragmentizer.rs  lib.rs  processor.rs  span.rs
crates/wordc/src/fragmentizer/: dumb.rs  mod.rs  rust.rs
examples/helix/: Justfile  test.rs
examples/helix/.helix/: languages.toml
