lints.workspace = true

[package]
name = "lspelling-lsp"
version = "0.0.0"
edition = "2021"

[dependencies]
lspelling-wordc = { workspace = true }

ruspell = { workspace = true }
tracing = { workspace = true }

parking_lot = "0.12"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
